# 4hu0

./: .gitignore  README.md
src/: CMakeLists.txt  main.cpp
src/ChessMechanism/: CMakeLists.txt  ChessMechanism.hpp  ChessMove.cpp  ChessMove.hpp  Chessboard.cpp  Chessboard.hpp  Chessman.cpp  Chessman.hpp  Configuration.cpp  Configuration.hpp  Game.cpp  Game.hpp
src/ChessMechanism/UnitTests/: CMakeLists.txt  test-1.cpp  test-2.cpp  test-3.cpp
src/MCTS/: CMakeLists.txt  GameTree.cpp  GameTree.hpp  MCTS.hpp  UCBPolicy.cpp  UCBPolicy.hpp
src/MCTS/UnitTests/: CMakeLists.txt  test-1.cpp
src/Models_py/: conf.txt  model.py
src/NeuralModels/: CMakeLists.txt  DataLoader.cpp  DataLoader.hpp  ModelTrain.cpp  NNModel.hpp  NeuralModel.cpp  NeuralModel.hpp  Trainer.cpp  Trainer.hpp
src/NeuralModels/NeuralMCTS/: NeuralGameTree.cpp  NeuralGameTree.hpp
src/NeuralModels/SelfPlay/: Agent.cpp  Agent.hpp  AgentNeural.cpp  AgentNeural.hpp  AgentPureMCTS.cpp  AgentPureMCTS.hpp  DataGen.cpp  SelfPlayData.cpp  SelfPlayData.hpp
src/NeuralModels/UnitTests/: CMakeLists.txt  test-1.cpp  test-2.cpp  test-3.cpp  test-4.cpp  test-5.cpp
src/XBoardComm/: CMakeLists.txt  xboard.cpp
third/: install.sh
train/: .gitignore
